--- a/oktober/index.html
+++ b/oktober/index.html
@@ -188,7 +188,7 @@
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/empat.html" target="_blank" rel="noopener noreferrer">
               https://niddumulu.github.io/shope-tools/oktober/empat.html
             </a>
-            <span class="small">Link 4 — empat.html</span>
+            <span class="small">Link 4 rinimuk infinix — empat.html</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
