--- a/oktober/index.html
+++ b/oktober/index.html
@@ -149,7 +149,7 @@
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/satu.html" target="_blank" rel="noopener noreferrer">
               https://niddumulu.github.io/shope-tools/oktober/satu.html
             </a>
-            <span class="small">Link 1 Jalbizki Poco — satu.html</span>
+            <span class="small">HP 1 Jalbizki  — satu.html</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -162,7 +162,7 @@
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/dua.html" target="_blank" rel="noopener noreferrer">
               https://niddumulu.github.io/shope-tools/oktober/dua.html
             </a>
-            <span class="small">Link 2 ranosadewa redmi — dua.html</span>
+            <span class="small">HP 2 ranosadewa — dua.html</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -175,7 +175,7 @@
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/tiga.html" target="_blank" rel="noopener noreferrer">
               https://niddumulu.github.io/shope-tools/oktober/tiga.html
             </a>
-            <span class="small">Link 3 kakfitro itel — tiga.html</span>
+            <span class="small">HP 3 kakfitro — tiga.html</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -188,7 +188,7 @@
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/empat.html" target="_blank" rel="noopener noreferrer">
               https://niddumulu.github.io/shope-tools/oktober/empat.html
             </a>
-            <span class="small">Link 4 rinimuk infinix — empat.html</span>
+            <span class="small">HP 4 rinimuk — empat.html</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -201,7 +201,7 @@
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/lima.html" target="_blank" rel="noopener noreferrer">
               https://niddumulu.github.io/shope-tools/oktober/lima.html
             </a>
-            <span class="small">Link 5 nurbadstore RS — lima.html</span>
+            <span class="small">HP 5 nurbadstore — lima.html</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
