--- a/oktober1/index.html
+++ b/oktober1/index.html
@@ -146,8 +146,8 @@
         <!-- Item template -->
         <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/satu.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/satu.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/satu.html
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/satu.html" target="_blank" rel="noopener noreferrer">
+              Jalbizki
             </a>
             <span class="small">HP 1 Jalbizki  — satu.html</span>
           </div>
