--- a/oktober1/index.html
+++ b/oktober1/index.html
@@ -157,10 +157,10 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/dua.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/dua.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/dua.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/dua.html
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/dua.html" target="_blank" rel="noopener noreferrer">
+              ranosadewa
             </a>
             <span class="small">HP 2 ranosadewa — dua.html</span>
           </div>
@@ -170,10 +170,10 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/tiga.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/tiga.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/tiga.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/tiga.html
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/tiga.html" target="_blank" rel="noopener noreferrer">
+              kakfitro
             </a>
             <span class="small">HP 3 kakfitro — tiga.html</span>
           </div>
@@ -183,10 +183,10 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/empat.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/empat.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/empat.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/empat.html
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/empat.html" target="_blank" rel="noopener noreferrer">
+              rinimuk
             </a>
             <span class="small">HP 4 rinimuk — empat.html</span>
           </div>
@@ -196,10 +196,10 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/lima.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/lima.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/lima.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/lima.html
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/lima.html" target="_blank" rel="noopener noreferrer">
+              nurbadstore
             </a>
             <span class="small">HP 5 nurbadstore — lima.html</span>
           </div>
