--- a/oktober1/index.html
+++ b/oktober1/index.html
@@ -144,12 +144,12 @@
 
       <div id="linkList" class="list">
         <!-- Item template -->
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/satu.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/1.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/satu1.html" target="_blank" rel="noopener noreferrer">
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/1.html" target="_blank" rel="noopener noreferrer">
               Jalbizki
             </a>
-            <span class="small">HP 1 Jalbizki  — satu.html</span>
+            <span class="small">HP 1 Jalbizki  </span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -157,12 +157,12 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/dua.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/2.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/dua.html" target="_blank" rel="noopener noreferrer">
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/2.html" target="_blank" rel="noopener noreferrer">
               ranosadewa
             </a>
-            <span class="small">HP 2 ranosadewa — dua.html</span>
+            <span class="small">HP 2 ranosadewa</span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -170,12 +170,12 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/tiga.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/3.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/tiga.html" target="_blank" rel="noopener noreferrer">
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/3.html" target="_blank" rel="noopener noreferrer">
               kakfitro
             </a>
-            <span class="small">HP 3 kakfitro — tiga.html</span>
+            <span class="small">HP 3 kakfitro </span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -183,12 +183,12 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/empat.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/4.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/empat.html" target="_blank" rel="noopener noreferrer">
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/4.html" target="_blank" rel="noopener noreferrer">
               rinimuk
             </a>
-            <span class="small">HP 4 rinimuk — empat.html</span>
+            <span class="small">HP 4 rinimuk </span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
@@ -196,12 +196,12 @@
           </div>
         </div>
 
-        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/lima.html">
+        <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober1/5.html">
           <div class="link-box">
-            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/lima.html" target="_blank" rel="noopener noreferrer">
+            <a class="link" href="https://niddumulu.github.io/shope-tools/oktober1/5.html" target="_blank" rel="noopener noreferrer">
               nurbadstore
             </a>
-            <span class="small">HP 5 nurbadstore — lima.html</span>
+            <span class="small">HP 5 nurbadstore </span>
           </div>
           <div class="controls">
             <button class="openBtn">Buka</button>
