--- a/oktober1/index.html
+++ b/oktober1/index.html
@@ -131,7 +131,7 @@
   <div class="container">
     <header>
       <div>
-        <h1>Daftar Link Klikabel</h1>
+        <h1>Daftar Link 21 22 dst</h1>
         <p class="lead">Klik untuk buka, atau gunakan tombol salin untuk menyalin link.</p>
       </div>
     </header>
