--- a/oktober1/4.html
+++ b/oktober1/4.html
@@ -57,7 +57,7 @@
 
 <div id="stats"></div>
 
-<h3>Output (maks 100 per halaman)</h3>
+<h3>Output (akun 4)</h3>
 <div id="output"></div>
 <button id="copyBtn" onclick="copyToClipboard()">Copy Link di Halaman Ini</button>
 
