--- a/10rb.html
+++ b/10rb.html
@@ -43,7 +43,6 @@
   <button id="copyInputLinksBtn">Copy Input Links</button>
 </div>
 
-<!-- ✅ Tambahan: List File untuk Input Links -->
 <h3>List File TXT (untuk Input Links)</h3>
 <textarea id="fileListLinks" placeholder="contoh:
 satu.txt
@@ -57,23 +56,6 @@ tiga.txt"></textarea>
   Disponsori oleh <strong>Kios Tembakau MadGazan</strong>
 </div>
 
-<h3>Masukkan ID Toko yang Dikecualikan (satu per baris)</h3>
-<textarea id="excludedShops" placeholder="Contoh: 123456789&#10;987654321"></textarea>
-<div class="input-buttons">
-  <button id="ambilTokoBtn">Ambil dari satu.txt</button>
-  <button id="clearInputTokoBtn">Clear Input Toko</button>
-  <button id="copyInputTokoBtn">Copy Input Toko</button>
-</div>
-
-<!-- ✅ Tambahan: List File untuk Input Toko -->
-<h3>List File TXT (untuk Excluded Shops)</h3>
-<textarea id="fileListToko" placeholder="contoh:
-data_toko.txt
-toko2.txt"></textarea>
-<div class="input-buttons">
-  <button id="ambilFileListTokoBtn">Ambil Semua ke Input Toko</button>
-</div>
-
 <div id="stats"></div>
 
 <h3>Output (akun 1)</h3>
@@ -85,7 +67,6 @@ toko2.txt"></textarea>
 <script>
 let allLinks=[], currentPage=1, maxPerPage=100;
 const inputLinksEl=document.getElementById('inputLinks');
-const excludedShopsEl=document.getElementById('excludedShops');
 const pageKey=location.pathname.split('/').pop().replace(/\.[^/.]+$/,'');
 
 // ✅ Fungsi ambil dari list file
@@ -108,69 +89,52 @@ async function loadFromFileList(listTextarea, targetTextarea){
   processLinks();
 }
 
+// ✅ Load dari localstorage
 window.onload=()=>{ 
   if(localStorage.getItem(`${pageKey}_inputLinks`)) inputLinksEl.value=localStorage.getItem(`${pageKey}_inputLinks`);
-  if(localStorage.getItem(`${pageKey}_excludedShops`)) excludedShopsEl.value=localStorage.getItem(`${pageKey}_excludedShops`);
   processLinks();
 }
 
 // ✅ Tombol Ambil Semua List
 document.getElementById('ambilFileListLinksBtn').addEventListener('click',()=>loadFromFileList(document.getElementById('fileListLinks'), inputLinksEl));
-document.getElementById('ambilFileListTokoBtn').addEventListener('click',()=>loadFromFileList(document.getElementById('fileListToko'), excludedShopsEl));
 
-// ✅ Tombol lama tetap dipertahankan (tidak dihapus)
+// ✅ Tombol kasih isi dari satu.txt
 document.getElementById('ambilLinksBtn').addEventListener('click',async ()=>{
   try{
     const res=await fetch('satu.txt?t='+Date.now(),{cache:'no-store'});
     if(!res.ok) throw new Error('HTTP '+res.status);
     const text=await res.text();
-    const rows=text.split(/\r?\n/).map(r=>r.trim()).filter(Boolean);
-    inputLinksEl.value=rows.join("\n");
+    inputLinksEl.value=text.trim();
     localStorage.setItem(`${pageKey}_inputLinks`,inputLinksEl.value);
     processLinks();
   }catch(e){alert("Gagal mengambil satu.txt: "+e.message);}
 });
 
-document.getElementById('ambilTokoBtn').addEventListener('click',async ()=>{
-  try{
-    const res=await fetch('data_toko.txt?t='+Date.now(),{cache:'no-store'});
-    if(!res.ok) throw new Error('HTTP '+res.status);
-    const text=await res.text();
-    const rows=text.split(/\r?\n/).map(r=>r.trim()).filter(Boolean);
-    excludedShopsEl.value=rows.join("\n");
-    localStorage.setItem(`${pageKey}_excludedShops`,excludedShopsEl.value);
-    processLinks();
-  }catch(e){alert("Gagal mengambil data_toko.txt: "+e.message);}
+// ✅ Clear/copy input
+document.getElementById('clearInputLinksBtn').addEventListener('click',()=>{
+  inputLinksEl.value=''; localStorage.removeItem(`${pageKey}_inputLinks`); processLinks();
+});
+document.getElementById('copyInputLinksBtn').addEventListener('click',()=>{
+  const text=inputLinksEl.value.trim();
+  if(!text){alert("Input kosong!"); return;}
+  navigator.clipboard.writeText(text).then(()=>alert("Isi input berhasil disalin!"));
 });
 
-// ✅ Sisanya tetap sama (tidak diubah)...
-// -- kode proses pagination tetap seperti sebelumnya ----------------------------------------------------
-
+// ✅ Auto simpan & proses saat diketik
 inputLinksEl.addEventListener('input',()=>{ localStorage.setItem(`${pageKey}_inputLinks`,inputLinksEl.value); processLinks(); });
-excludedShopsEl.addEventListener('input',()=>{ localStorage.setItem(`${pageKey}_excludedShops`,excludedShopsEl.value); processLinks(); });
 
+// ✅ Fungsi utama: Tanpa filter toko, tanpa ###, auto 100 per halaman
 function processLinks(){
-  const rawLines=inputLinksEl.value.split('\n').map(l=>l.trim());
-  const excludedShopIds=excludedShopsEl.value.split('\n').map(id=>id.trim()).filter(Boolean);
-  
-  let pages=[], currentLinks=[];
-  for(let i=0;i<rawLines.length;i++){
-    const line=rawLines[i];
-    if(line==='' || line==='###'){
-      if(currentLinks.length>0){ pages.push(currentLinks); currentLinks=[]; }
-    }else if(/\/product\/\d+\/\d+/.test(line)){
-      const match=line.match(/\/product\/(\d+)\/\d+/);
-      const shopId=match[1];
-      if(!excludedShopIds.includes(shopId)) currentLinks.push(line);
-      if(currentLinks.length>=maxPerPage){ pages.push(currentLinks); currentLinks=[]; }
-    }
+  const rawLines=inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
+
+  let pages=[];
+  for(let i=0;i<rawLines.length;i+=maxPerPage){
+    pages.push(rawLines.slice(i, i+maxPerPage));
   }
-  if(currentLinks.length>0) pages.push(currentLinks);
 
   allLinks=pages; currentPage=1; showPage(currentPage); renderPagination();
 
-  const totalLinks=rawLines.filter(l=>l && l!=='###').length;
-  document.getElementById('stats').textContent=`Total link diinput: ${totalLinks}\nTotal halaman: ${allLinks.length}`;
+  document.getElementById('stats').textContent=`Total link diinput: ${rawLines.length}\nTotal halaman: ${allLinks.length}`;
   document.getElementById('output').style.display=allLinks.length?'block':'none';
 }
 
@@ -184,7 +148,7 @@ function showPage(page){
 function copyToClipboard(){
   if(!allLinks.length) return;
   const text=allLinks[currentPage-1].join('\n');
-  navigator.clipboard.writeText(text).then(()=>alert(`Link di halaman ${currentPage} berhasil disalin!`)).catch(()=>alert('Gagal menyalin!'));
+  navigator.clipboard.writeText(text).then(()=>alert(`Link di halaman ${currentPage} berhasil disalin!`));
 }
 
 function renderPagination(){
