--- a/10rb.html
+++ b/10rb.html
@@ -5,9 +5,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Link Shopee Pagination</title>
 <style>
-  body { font-family: Arial, sans-serif; margin: 15px; max-width: 700px; margin-left:auto; margin-right:auto; }
+  body { font-family: Arial, sans-serif; margin: 15px; max-width: 900px; margin-left:auto; margin-right:auto; }
   h2,h3 { font-size: 1.2rem; margin-bottom: 8px; }
-  textarea { width:100%; height:150px; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; }
+  textarea { width:100%; height:150px; box-sizing:border-box; font-size:1rem; padding:8px; border-radius:6px; border:1px solid #ccc; resize:vertical; }
   #output { display:none; margin-top:10px; }
   #output a { display:block; margin-bottom:6px; color:#0066cc; text-decoration:none; word-wrap:break-word; }
   #output a:hover { text-decoration:underline; }
@@ -22,6 +22,10 @@
   .input-buttons button:hover { background:#eee; }
   #stats { margin:15px 0; font-weight:bold; font-size:1rem; white-space:pre-line; }
   .sponsor { background-color:#fffae6; border:1px solid #ffd42a; padding:12px; margin:15px 0; font-weight:bold; text-align:center; color:#b36b00; border-radius:6px; box-shadow:0 0 5px rgba(255,212,42,0.5); font-size:1rem; }
+  @media (max-width:720px){
+    body { padding:12px; }
+    textarea{ height:120px; }
+  }
   @media (max-width:480px){
     h2,h3{ font-size:1rem; }
     textarea{ height:120px; font-size:0.9rem; }
@@ -50,6 +54,8 @@ dua.txt
 tiga.txt"></textarea>
 <div class="input-buttons">
   <button id="ambilFileListLinksBtn">Ambil Semua ke Input Links</button>
+  <button id="clearFileListBtn">Clear List File</button>
+  <button id="copyFileListBtn">Copy List File</button>
 </div>
 
 <div class="sponsor">
@@ -65,106 +71,184 @@ tiga.txt"></textarea>
 <div class="pagination" id="pagination"></div>
 
 <script>
-let allLinks=[], currentPage=1, maxPerPage=100;
-const inputLinksEl=document.getElementById('inputLinks');
-const pageKey=location.pathname.split('/').pop().replace(/\.[^/.]+$/,'');
+/* Config */
+const MAX_PER_PAGE = 100;
+const STORAGE_KEY_INPUT = 'inputList';
+const STORAGE_KEY_FILELIST = 'fileListLinks';
 
-// ✅ Fungsi ambil dari list file
-async function loadFromFileList(listTextarea, targetTextarea){
-  const list = listTextarea.value.split('\n').map(x=>x.trim()).filter(Boolean);
-  if(!list.length){ alert("List file kosong!"); return; }
+/* State */
+let allPages = [];
+let currentPage = 1;
+
+/* Elements */
+const inputLinksEl = document.getElementById('inputLinks');
+const fileListLinksEl = document.getElementById('fileListLinks');
+const statsEl = document.getElementById('stats');
+const outputEl = document.getElementById('output');
+const paginationEl = document.getElementById('pagination');
+
+/* --- LocalStorage: restore on load --- */
+window.addEventListener('load', () => {
+  try {
+    const savedInput = localStorage.getItem(STORAGE_KEY_INPUT);
+    const savedFileList = localStorage.getItem(STORAGE_KEY_FILELIST);
+    if (savedInput) inputLinksEl.value = savedInput;
+    if (savedFileList) fileListLinksEl.value = savedFileList;
+  } catch (e) {
+    console.warn('LocalStorage read error', e);
+  }
+  processLinks();
+});
+
+/* --- Auto-save on input changes --- */
+inputLinksEl.addEventListener('input', () => {
+  try {
+    localStorage.setItem(STORAGE_KEY_INPUT, inputLinksEl.value);
+  } catch (e) {
+    console.warn('LocalStorage write error', e);
+  }
+  processLinks();
+});
+fileListLinksEl.addEventListener('input', () => {
+  try {
+    localStorage.setItem(STORAGE_KEY_FILELIST, fileListLinksEl.value);
+  } catch (e) {
+    console.warn('LocalStorage write error', e);
+  }
+});
+
+/* --- Button actions --- */
+/* Ambil dari satu.txt (butuh dijalankan lewat server agar fetch sukses) */
+document.getElementById('ambilLinksBtn').addEventListener('click', async () => {
+  try {
+    const res = await fetch('satu.txt?t=' + Date.now(), { cache: 'no-store' });
+    if (!res.ok) throw new Error('HTTP ' + res.status);
+    const text = await res.text();
+    inputLinksEl.value = text.trim();
+    try { localStorage.setItem(STORAGE_KEY_INPUT, inputLinksEl.value); } catch(e){}
+    processLinks();
+    alert('Berhasil mengambil satu.txt');
+  } catch (e) {
+    alert('Gagal mengambil satu.txt: ' + e.message);
+  }
+});
+
+/* Clear / Copy input links */
+document.getElementById('clearInputLinksBtn').addEventListener('click', () => {
+  inputLinksEl.value = '';
+  try { localStorage.removeItem(STORAGE_KEY_INPUT); } catch(e){}
+  processLinks();
+});
+document.getElementById('copyInputLinksBtn').addEventListener('click', () => {
+  const text = inputLinksEl.value.trim();
+  if (!text) { alert('Input kosong!'); return; }
+  navigator.clipboard.writeText(text).then(() => alert('Isi input berhasil disalin!')).catch(() => alert('Gagal menyalin!'));
+});
+
+/* Ambil semua file yang ada di fileListLinks */
+document.getElementById('ambilFileListLinksBtn').addEventListener('click', () => {
+  loadFromFileList(fileListLinksEl, inputLinksEl);
+});
+
+/* Clear / Copy file list */
+document.getElementById('clearFileListBtn').addEventListener('click', () => {
+  fileListLinksEl.value = '';
+  try { localStorage.removeItem(STORAGE_KEY_FILELIST); } catch(e){}
+});
+document.getElementById('copyFileListBtn').addEventListener('click', () => {
+  const text = fileListLinksEl.value.trim();
+  if (!text) { alert('List file kosong!'); return; }
+  navigator.clipboard.writeText(text).then(() => alert('List file berhasil disalin!')).catch(() => alert('Gagal menyalin!'));
+});
+
+/* Copy current page links */
+function copyToClipboard() {
+  if (!allPages.length) { alert('Tidak ada link untuk disalin!'); return; }
+  const text = allPages[currentPage - 1].join('\n');
+  navigator.clipboard.writeText(text).then(() => alert(`Link di halaman ${currentPage} berhasil disalin!`)).catch(() => alert('Gagal menyalin!'));
+}
+
+/* --- Helper: load from file list --- */
+async function loadFromFileList(listTextarea, targetTextarea) {
+  const list = listTextarea.value.split('\n').map(s => s.trim()).filter(Boolean);
+  if (!list.length) { alert('List file kosong!'); return; }
 
   let combined = [];
-  for(let file of list){
-    try{
-      const res = await fetch(file+'?t='+Date.now(),{cache:'no-store'});
-      if(!res.ok) continue;
+  for (let fname of list) {
+    try {
+      // require server to serve these files; add timestamp to avoid cache
+      const res = await fetch(fname + '?t=' + Date.now(), { cache: 'no-store' });
+      if (!res.ok) { console.warn('Skip (not found):', fname); continue; }
       const text = await res.text();
-      combined.push(...text.split(/\r?\n/).map(r=>r.trim()).filter(Boolean));
-    }catch(e){
-      console.log("Skip: "+file);
+      const rows = text.split(/\r?\n/).map(r => r.trim()).filter(Boolean);
+      combined.push(...rows);
+    } catch (e) {
+      console.warn('Gagal fetch', fname, e);
     }
   }
-  targetTextarea.value = combined.join("\n");
+  targetTextarea.value = combined.join('\n');
+  try { localStorage.setItem(STORAGE_KEY_INPUT, targetTextarea.value); } catch(e){}
   processLinks();
 }
 
-// ✅ Load dari localstorage
-window.onload=()=>{ 
-  if(localStorage.getItem(`${pageKey}_inputLinks`)) inputLinksEl.value=localStorage.getItem(`${pageKey}_inputLinks`);
-  processLinks();
-}
-
-// ✅ Tombol Ambil Semua List
-document.getElementById('ambilFileListLinksBtn').addEventListener('click',()=>loadFromFileList(document.getElementById('fileListLinks'), inputLinksEl));
-
-// ✅ Tombol kasih isi dari satu.txt
-document.getElementById('ambilLinksBtn').addEventListener('click',async ()=>{
-  try{
-    const res=await fetch('satu.txt?t='+Date.now(),{cache:'no-store'});
-    if(!res.ok) throw new Error('HTTP '+res.status);
-    const text=await res.text();
-    inputLinksEl.value=text.trim();
-    localStorage.setItem(`${pageKey}_inputLinks`,inputLinksEl.value);
-    processLinks();
-  }catch(e){alert("Gagal mengambil satu.txt: "+e.message);}
-});
-
-// ✅ Clear/copy input
-document.getElementById('clearInputLinksBtn').addEventListener('click',()=>{
-  inputLinksEl.value=''; localStorage.removeItem(`${pageKey}_inputLinks`); processLinks();
-});
-document.getElementById('copyInputLinksBtn').addEventListener('click',()=>{
-  const text=inputLinksEl.value.trim();
-  if(!text){alert("Input kosong!"); return;}
-  navigator.clipboard.writeText(text).then(()=>alert("Isi input berhasil disalin!"));
-});
-
-// ✅ Auto simpan & proses saat diketik
-inputLinksEl.addEventListener('input',()=>{ localStorage.setItem(`${pageKey}_inputLinks`,inputLinksEl.value); processLinks(); });
-
-// ✅ Fungsi utama: Tanpa filter toko, tanpa ###, auto 100 per halaman
-function processLinks(){
-  const rawLines=inputLinksEl.value.split('\n').map(l=>l.trim()).filter(Boolean);
-
-  let pages=[];
-  for(let i=0;i<rawLines.length;i+=maxPerPage){
-    pages.push(rawLines.slice(i, i+maxPerPage));
+/* --- Core processing & pagination (no filter, all non-empty lines accepted) --- */
+function processLinks() {
+  const raw = inputLinksEl.value.split('\n').map(l => l.trim()).filter(Boolean);
+  allPages = [];
+  for (let i = 0; i < raw.length; i += MAX_PER_PAGE) {
+    allPages.push(raw.slice(i, i + MAX_PER_PAGE));
   }
-
-  allLinks=pages; currentPage=1; showPage(currentPage); renderPagination();
-
-  document.getElementById('stats').textContent=`Total link diinput: ${rawLines.length}\nTotal halaman: ${allLinks.length}`;
-  document.getElementById('output').style.display=allLinks.length?'block':'none';
+  if (allPages.length === 0) {
+    currentPage = 1;
+  } else {
+    currentPage = Math.min(currentPage, allPages.length);
+  }
+  renderStats(raw.length, allPages.length);
+  renderPagination();
+  showPage(currentPage);
 }
 
-function showPage(page){
-  if(page<1||page>allLinks.length) return;
-  const pageLinks=allLinks[page-1];
-  document.getElementById('output').innerHTML=pageLinks.map(l=>`<a href="${l}" target="_blank" rel="noopener noreferrer">${l}</a>`).join('');
-  currentPage=page; highlightActivePage();
+/* --- UI renderers --- */
+function renderStats(totalLinks, totalPages) {
+  statsEl.textContent = `Total link diinput: ${totalLinks}\nTotal halaman: ${totalPages}`;
 }
 
-function copyToClipboard(){
-  if(!allLinks.length) return;
-  const text=allLinks[currentPage-1].join('\n');
-  navigator.clipboard.writeText(text).then(()=>alert(`Link di halaman ${currentPage} berhasil disalin!`));
+function showPage(page) {
+  if (!allPages.length) {
+    outputEl.innerHTML = '';
+    outputEl.style.display = 'none';
+    return;
+  }
+  if (page < 1) page = 1;
+  if (page > allPages.length) page = allPages.length;
+  currentPage = page;
+  const pageLinks = allPages[page - 1];
+  outputEl.innerHTML = pageLinks.map(l => {
+    // ensure proper escaping in attribute
+    const safe = l.replace(/"/g, '&quot;');
+    return `<a href="${safe}" target="_blank" rel="noopener noreferrer">${safe}</a>`;
+  }).join('');
+  outputEl.style.display = 'block';
+  highlightActivePage();
 }
 
-function renderPagination(){
-  const pagination=document.getElementById('pagination');
-  pagination.innerHTML='';
-  for(let i=1;i<=allLinks.length;i++){
-    const btn=document.createElement('button');
-    btn.textContent=i; btn.className='page-btn';
-    if(i===currentPage) btn.classList.add('active');
-    btn.addEventListener('click',()=>showPage(i));
-    pagination.appendChild(btn);
+function renderPagination() {
+  paginationEl.innerHTML = '';
+  for (let i = 1; i <= allPages.length; i++) {
+    const btn = document.createElement('button');
+    btn.textContent = i;
+    btn.className = 'page-btn';
+    if (i === currentPage) btn.classList.add('active');
+    btn.addEventListener('click', () => showPage(i));
+    paginationEl.appendChild(btn);
   }
 }
 
-function highlightActivePage(){
-  document.querySelectorAll('.page-btn').forEach(btn=>{ btn.classList.remove('active'); if(parseInt(btn.textContent)===currentPage) btn.classList.add('active'); });
+function highlightActivePage() {
+  document.querySelectorAll('.page-btn').forEach(btn => {
+    btn.classList.remove('active');
+    if (parseInt(btn.textContent, 10) === currentPage) btn.classList.add('active');
+  });
 }
 </script>
 
