--- a/oktober/index.html
+++ b/oktober/index.html
@@ -147,7 +147,7 @@
         <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/satu.html">
           <div class="link-box">
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/satu.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/satu.html
+              oktober/satu.html
             </a>
             <span class="small">HP 1 Jalbizki  — satu.html</span>
           </div>
