--- a/oktober/index.html
+++ b/oktober/index.html
@@ -138,8 +138,7 @@
 
     <div class="card">
       <div class="top-actions">
-        <button id="copyAll" class="ghost" title="Salin semua link ke clipboard">Salin Semua</button>
-        <button id="openAll" class="primary" title="Buka semua link di tab baru">Buka Semua</button>
+       
       </div>
 
       <div id="linkList" class="list">
@@ -160,7 +159,7 @@
         <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/dua.html">
           <div class="link-box">
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/dua.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/dua.html
+              oktober/dua.html
             </a>
             <span class="small">HP 2 ranosadewa — dua.html</span>
           </div>
@@ -173,7 +172,7 @@
         <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/tiga.html">
           <div class="link-box">
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/tiga.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/tiga.html
+              oktober/tiga.html
             </a>
             <span class="small">HP 3 kakfitro — tiga.html</span>
           </div>
@@ -186,7 +185,7 @@
         <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/empat.html">
           <div class="link-box">
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/empat.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/empat.html
+              oktober/empat.html
             </a>
             <span class="small">HP 4 rinimuk — empat.html</span>
           </div>
@@ -199,7 +198,7 @@
         <div class="item" data-url="https://niddumulu.github.io/shope-tools/oktober/lima.html">
           <div class="link-box">
             <a class="link" href="https://niddumulu.github.io/shope-tools/oktober/lima.html" target="_blank" rel="noopener noreferrer">
-              https://niddumulu.github.io/shope-tools/oktober/lima.html
+              oktober/lima.html
             </a>
             <span class="small">HP 5 nurbadstore — lima.html</span>
           </div>
